--- a/app/views/groups/_group_details.html.erb
+++ b/app/views/groups/_group_details.html.erb
@@ -1,6 +1,26 @@
+<style>
+.card {
+    height: auto;
+    width: 80%;
+    background-color: #f8f9fa; /* Change this to your desired background color */
+    color: #007bff; /* Change this to your desired text color */
+    border: none; /* Change this to your desired border color */
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.card-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.group-header {
+    font-family: 'Roboto', sans-serif; /* Change this to your desired font */
+}
+</style>
+
 <div class="group-details">
-
-
 <div class="card bg-newwhite text-primary border-primary shadow m-3 teste2" style="border-radius: 15px; height: auto; width: 80%;">
   <div class="card-body d-flex flex-column justify-content-center align-items-center">
     <div class="container">
@@ -25,33 +45,167 @@
 <div class="card bg-newwhite text-primary border-primary shadow m-3" style="border-radius: 15px; height: auto; width: 80%;">
   <div class="card-body d-flex flex-column justify-content-center align-items-center">
     <div class="container">
-      <h4 class="group-header">Group: <%= @group.name %></h4>
+      <h5 class="group-header">Description</h5>
       <p>
-        <strong>Description:</strong>
         <%= @group.description %>
       </p>
     </div>
   </div>
 </div>
 
-
-<div class="card bg-newwhite text-primary border-primary shadow m-3" style="border-radius: 15px; height: auto; width: 80%;">
-  <div class="card-body d-flex flex-column justify-content-center align-items-center">
+<div class="card-body d-flex flex-column justify-content-center align-items-center">
     <div class="container">
-      <h4 class="group-header">Members: </h4>
-      <ul>
-        <% @group.users.each do |user| %>
-          <li>
-            <%= user.name.presence || 'Unnamed User' %>
-            <% if current_user == @group.creator && current_user != user %>
-              <%= button_to 'Kick', kick_game_group_path(@group.game, @group, user_id: user.id), method: :delete, data: { confirm: 'Are you sure?' } %>
+        <div class="member-container">
+            <h5 class="group-header">Members</h5>
+
+            <% @group.users.each do |user| %>
+                <div class="member-card">
+                    <div class="profile-container">
+                        <% if user.photo.attached? %>
+                            <%= link_to profile_path(user) do %>
+                                <%= cl_image_tag(user.photo.key, width: '35', height: '35', crop: :fill, class: 'rounded-circle profile-image') %>
+                            <% end %>
+                        <% else %>
+                            <%= link_to profile_path(user) do %>
+                                <%= image_tag 'https://placehold.co/40x40', alt: 'placeholder', class: 'rounded-circle profile-image', width: '35', height: '35' %>
+                            <% end %>
+                        <% end %>
+                        <span class="ms-2 member-name">
+                            <%= user.name.presence || 'Unnamed User' %>
+                        </span>
+                    </div>
+
+                    <% if current_user == @group.creator && current_user != user %>
+                        <%= button_to 'Kick', kick_game_group_path(@group.game, @group, user_id: user.id), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn-kick' %>
+
+                    <% end %>
+                </div>
             <% end %>
-          </li>
-        <% end %>
-      </ul>
+        </div>
     </div>
-  </div>
 </div>
+
+
+
+<style>
+  .new-btn {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.16);
+  color: #fff;
+  font-weight: bold;
+  text-decoration: none;
+  display: inline-block;
+  transition: transform 0.3s ease-in-out, font-size 0.3s ease-in-out;
+  width: auto;
+  margin-bottom: 20px;
+  margin-right: 8px;
+  background-color: #1CAE82;
+}
+
+.new-btn:hover,
+.new-btn:focus {
+  transform: scale(1.1);
+  font-size: 18px;
+  transition: transform 0.3s ease-in-out, font-size 0.3s ease-in-out;
+}
+
+ .btn-kick {
+    background-color: #dc3545;
+    color: #fff;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    z-index: 1;
+}
+
+
+  .group-header {
+    font-family: 'Roboto', sans-serif; /* Change this to your desired font */
+    margin-top: 10px; /* Add 10px gap at the top */
+    margin-bottom: 10px; /* Add 10px gap at the bottom */
+}
+
+.card-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0px;
+    width: 86%;
+}
+
+.member-container {
+    background-color: white;
+    border-radius: 25px;
+    padding: 5px;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1), 0 2px 4px rgba(0, 0, 0, 0.1), 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin: 0 auto;
+    overflow: auto;
+    max-height: 300px;
+    margin-bottom: 20px;
+    position: relative;
+}
+
+.member-card {
+    background-color: #f8f9fa;
+    border-radius: 15px;
+    padding: 10px;
+    margin: 5px;
+    height: 40px;
+    width: calc(100% - 5px);
+     display: flex;
+    align-items: center;
+    justify-content: center;
+    justify-content: flex-start;
+    justify-content: space-between;
+}
+
+.profile-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.profile-image {
+    display: inline-block;
+    vertical-align: middle;
+    width: 35px;
+    height: 35px;
+    object-fit: cover;
+    border-radius: 50%;
+    position: relative;
+    z-index: 2;
+    margin-top: 0px;
+    margin-left: 2.5px;
+    margin-right: 10px;
+    z-index: 1;
+}
+
+.profile-circle {
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    clip-path: circle(50% at 50% 50%);
+    border-radius: 50%;
+    background: linear-gradient(to bottom right, #004080 0%, rgb(17, 107, 123) 50%, #ffc107 80%, rgb(0, 153, 51) 100%);
+    clip-path: circle();
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin-right: 10px;
+    z-index: 2;
+}
+
+.member-name {
+    display: inline-block;
+    vertical-align: middle;
+    text-align: right;
+    margin: 0;
+}
+
+</style>
 
 
 
@@ -59,13 +213,13 @@
 <div class="buttons-group">
   <div class="card-body d-flex flex-column justify-content-center align-items-center">
     <div class="container">
-
+      <div class="mx-auto">
       <div class="buttons-layout-group">
-          <%= button_to 'Join', join_game_group_path(@group.game, @group), method: :post, class: "btn-g2" %>
-          <%= button_to 'Edit', edit_game_group_path(@group.game, @group), method: :get, class: "btn-g2" %>
-          <%= button_to 'Leave', leave_game_group_path(@group.game, @group), method: :post, class: "btn-g2" %>
+          <%= button_to 'Join', join_game_group_path(@group.game, @group), method: :post, class: "new-btn" %>
+          <%= button_to 'Edit', edit_game_group_path(@group.game, @group), method: :get, class: "new-btn" %>
+          <%= button_to 'Leave', leave_game_group_path(@group.game, @group), method: :post, class: "new-btn" %>
       </div>
-
+    </div>
       <div>
         <%= simple_form_for @group, url: game_group_path(@group.game, @group), method: :delete, html: {class: "teste"} do |f| %>
           <%= f.button :submit, 'Delete group', data: { confirm: 'Are you sure?' }, class: "btn-danger" %>
