--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -12,7 +12,7 @@
 </style>
 
 <div class="container mt-5">
-  <%= link_to 'Back', root_path, class: 'btn btn-primary mb-3' %>
+  <%= link_to 'Back', teams_path, class: 'btn btn-primary mb-3' %>
   <div class="row team-details">
     <div class="col-md-6">
       <img class="img-fluid" src="<%= @team.emblem %>" alt="<%= @team.name %>">
