--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -57,7 +57,7 @@
               <div class="col-6 flex-column justify-content-center align-items-center text-center">
                 <p style="font-size: 18px; color: #333333;"><strong><%= "Location: #{@game.city}" %></strong></p>
                 <p style="font-size: 18px; color: #333333;"><strong><%= "Date: #{@game.date}" %></strong></p>
-                <img src="<%= @game.home_team.stadium %>" alt="<%= @game.home_team.stadium %> Image" style="height: 150px; width: 200px;" class="m-3">
+                <img src="<%= @game.home_team.stadium %>" alt="<%= @game.home_team.stadium %> Image" style="height: 150px; width: 200px;" class="m-3 rounded">
                 <h4><%= @game.home_team.stadium_name %></h4>
                 <p><%= @game.home_team.address %></p>
                 <div class="m-3">
